--- a/bitfield/impl/Cargo.toml
+++ b/bitfield/impl/Cargo.toml
@@ -9,3 +9,6 @@ proc-macro = true
 
 [dependencies]
 # TODO
+syn = {version = "1.0", features = ["derive", "parsing", "extra-traits"]}
+proc-macro2 = "1.0"
+quote = "1.0"
