--- a/bitfield/Cargo.toml
+++ b/bitfield/Cargo.toml
@@ -9,6 +9,10 @@ publish = false
 name = "tests"
 path = "tests/progress.rs"
 
+[[bin]]
+name = "test03"
+path = "tests/03-accessors.rs"
+
 [dev-dependencies]
 trybuild = { version = "1.0", features = ["diff"] }
 
